Scale a little smaller to prevent blurry borders

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -83,7 +83,7 @@ ul {
 
   outline: none;
 
-  @include transform(scale(0.9) translate3d(0,0,0));
+  @include transform(scale(0.8) translate3d(0,0,0));
   @include transition(transform 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275));
 
   &:hover,
